0.3.6  Added compose new message code (Issue 177)

0.3.5  Applied vimftw patch to build using gecko sdk 9

0.3.0  Moved Tray handling functions to a new javascript XPCOM component to avoid problems when the first window is closed (see Issue 79)
       Applied patch for Gecko2 support (Issue 127)
       Added option to select between "unread" and "new" messages notification (Issue 120)
       Added option to hide tray icon when not minimized (Issue 92)
       Added option to disable showing mail count into messages notification icon
       Dynamic creation of install.rdf 
       Exclude mails from special folders (Archive, Sent, Templates, Drafts) from message count
       Added option to disable the use of functions introduced with gtk >= 2.16

0.2.10 Merged "support for chatzilla" from Issue 135 
       "Select which servers to exclude" feature from Issue 105 
       Removed references to linux platform from SConscript file (Issue 138) 
       Applied fix for tb start minimized problem (Issue 122)

0.2.9  Fixed problems with icons transparency (Issue 56)
       Fixed code to save window position and re-enabled it by default (Issues 33,49)
       Removed harcoded nspr path from build script (Issue 128)        
       Added new build options and applied corrections to disable warnings (Issue 114)

0.2.8  Modified sunbird chrome path (Issue 116)
       Disabled multimedia keys by default (Issue 117)
       Update Thunderbird, Firefox and Seamonkey versions
       Fixed uncaught exception when no local folders are found in seamonkey and thunderbird (Issue 115)
       

0.2.7  Added ability to hide to tray on window minimize (Issue 77)
       Added command line options to the build script and ability to detect Gecko-sdk folders using pkg-config (Issue 109)
       Updated some icons
       Corrected javascript code to follow AMO indications.

0.2.6  Modified linking options to reduce library dependencies (Issue 58)

0.2.5  Fixed bug on 64bit systems (Issues 52,55,61)